# mcc

./: .gitignore  Makefile.am  README  configure.ac  mccrt.S
doc/: changes.md  language.txt
doc/examples/: ackermann.mc  fem.mc  mandelbrot.mc  sort.mc  sort.mc.stdout
include/: ast.h  bitmap.h  decl.h  expr.h  literal.h  mcc.h  statement.h  str_tab.h  symtab.h  tac.h
samples/: ackermann.mc  fem.help  mandelbrot.mc  sort.stdin
src/: ast.c  bitmap.c  decl.c  expr.c  function.c  optimize.c  parser.y  scanner.l  semantic.c  sexpr.c  stmt.c  str_tab.c  tac.c  token.h  typecheck.c
test/: Makemodule.am  expr_basic.c  fun_link.c  fun_link2.c  fun_redef.c  fun_redef2.c  function.c  if_else.c  if_else2.c  if_else3.c  main_check.c  main_check2.c  main_check3.c  minus_assoc.c  parser.c  precedence.c  return.c  return2.c  return3.c  return4.c  test.h  unary_minus.c  var_redef.c  var_redef2.c
tools/: mcc.c  mcc2dot.c  mcc2tac.c  mcc_check.c
